--- a/src/sass/components/_logo.scss
+++ b/src/sass/components/_logo.scss
@@ -14,9 +14,11 @@
 
     @media screen and (min-width:320px) and (max-width:767px) {
        font-size: 30px;
+       width: auto;
     }
-    @media screen and (min-width:768px) {
-        min-width: 330px;
+
+    @media screen and (min-width:768px) and (max-width:1023px) {
+        font-size: 30px;
     }
 
     &:hover,
