--- a/src/sass/layouts/_about.scss
+++ b/src/sass/layouts/_about.scss
@@ -8,9 +8,9 @@
 
     &__img {
         border-radius: 100px;
-        box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
-        box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
-        box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
+        box-shadow: var(--hover-shadow);
+        box-shadow: var(--hover-shadow);
+        box-shadow: var(--hover-shadow);
     }
 
     &__paragraph-info {
