--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -39,9 +39,7 @@
         &:focus {
             background-color: var(--main-text-color);
             color: var(--background-color);
-            box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
-            -moz-box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
-            box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
+            box-shadow: var(--hover-shadow);
             cursor: pointer;
         }
     }
