--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -4,6 +4,7 @@
     --main-text-color: #f3bc77;
     --background-color: #1d1716;
     --secondary-bg-color: #402a23;
+    --hover-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
 // svg-palete
     --svg-fill-first: #4267B2;
     --svg-fill-second:#C13584;
