fix image src in section about

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -3,7 +3,7 @@
         <h2 class="title animate__animated animate__backInLeft">Про мене</h2>
         <div class="about__container">
             <div class="about__container-img animate__animated animate__backInUp">
-                <img class="about__img" src="https://scontent.flwo4-2.fna.fbcdn.net/v/t31.18172-8/21083509_163659424185346_4143523546011725385_o.jpg?_nc_cat=100&ccb=1-7&_nc_sid=7f8c78&_nc_ohc=_bkUlLSYEOEAX-HQKPv&_nc_ht=scontent.flwo4-2.fna&oh=00_AfCBFpTXSTPxHMvH8pXIrg92196uga9kSUG2Co_LXNO5Tg&oe=656F98E5" alt="Катя">
+                <img class="about__img" src="https://scontent-iev1-1.xx.fbcdn.net/v/t39.30808-6/452109427_1553812701836671_2364895923319292750_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=127cfc&_nc_ohc=-ckg5vf5vykQ7kNvgF8kUg_&_nc_ht=scontent-iev1-1.xx&_nc_gid=AtLQfEwedq7mpacrfHJTfgw&oh=00_AYBw5AckogFM0L7PGsvX-VaugKtd7rRPcw95B73UovXc0w&oe=66DA6952" alt="Катя">
             </div>
             <div class="about__container-info animate__animated animate__backInRight">
                 <p class="about__paragraph-info">
