--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,6 +1,8 @@
 @import './common';
 @import './example';
 
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
 // pages
 @import './portfolio';
 @import './about';
