--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -42,6 +42,10 @@
     margin: 0 auto;
 }
 
+.advantages__titles {
+    font-family: "Lobster", sans-serif;
+    font-weight: 400;
+}
 
 @media screen and (min-width:320px) {
     .advantages__list {
