--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -1,4 +1,6 @@
 .hero {
+    font-family: "Lobster", sans-serif;
+    font-weight: 400;
     padding: 300px 0;
     text-align: center;
     background-image: linear-gradient(to bottom, rgba(10, 10, 10, 0.5), rgba(20, 20, 20, 0.7)), url(../images/background-img.jpg);
