--- a/src/sass/components/_title.scss
+++ b/src/sass/components/_title.scss
@@ -1,4 +1,7 @@
 .title {
+    font-family: "Lobster", sans-serif;
+    font-weight: 400;
+    font-style: normal;
     font-size: 45px;
     text-align: center;
     margin-bottom: 40px;
