done markup and styled section about

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -7,7 +7,15 @@
             </div>
             <div class="about__container-info animate__animated animate__backInRight">
                 <p class="about__paragraph-info">
-                    Тарасевич-Гривінська Катерина Андріївна. Народилася 28 серпня 1995 року у м.Івано-Франківськ. Навчалася в ЗОШ №13. Змалечку була дуже творчою, тому відвідувала всі мистецькі шкільні гуртки(танці, бісер, літературний клас) та з 5 класу розпочала навчання в Івано-франківській художній шолі, яку закінчила навідмінно.
+                    Тарасевич-Гривінська Катерина Андріївна.
+                    Народилася 28 серпня 1995 року у м.Івано-Франківськ.
+                    Навчалася в ЗОШ №13. Змалечку була дуже творчою,
+                    тому відвідувала всі мистецькі шкільні гуртки(танці, бісер, літературний клас)
+                    та з 5 класу розпочала навчання в Івано-франківській художній шолі,
+                    яку закінчила навідмінно.
+                    2012р. - 2015р. - навчалася в Косівському училищі прикладного та декоративного
+                    мистецтва Львівської національної академії мистецтв, по спеціальності “художнє ткацтво”,
+                    на бюджеті зі стипендією. Захист дипломної роботи тканої ширми “Сталий світ”, оцінка “відмінно” з відзнакою.
                 </p>
                 <a class="button" href="./about.html">Читати більше</a>
             </div>
