--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -1,15 +1,42 @@
 .container {
     @media screen and (min-width:320px) and (max-width:768px) {
         padding: 0 15px;
-        
     }
+
+    @media screen and (min-width:320px) {
+        width: 320px;
+        margin: 0 auto;
+    }
+
+    @media screen and (min-width:375px) {
+        width: 375px;
+        margin: 0 auto;
+    }
+
+    @media screen and (min-width:425px) {
+        width: 425px;
+        margin: 0 auto;
+    }
+
+    @media screen and (min-width:480px) {
+        width: 480px;
+        margin: 0 auto;
+    }
+
+    @media screen and (min-width:768px) {
+        width: 768px;
+    }
+
+    @media screen and (min-width:1024px) {
+        width: 1024px;
+    }
+
     @media screen and (min-width:768px) {
         padding: 0 32px;
         margin: 0 auto;
     }
+
     @media screen and (min-width:1200px) {
-        padding: 0 32px;
-        margin: 0 auto;
         width: 1200px;
     }
 }
