--- a/src/sass/components/_logo.scss
+++ b/src/sass/components/_logo.scss
@@ -10,7 +10,7 @@
     font-weight: 800;
     font-size: 48px;
     
-    transition: 500ms  var(--timing-function);
+    transition: var(--time-delay)  var(--timing-function);
 
     @media screen and (min-width:320px) and (max-width:767px) {
        font-size: 30px;
