--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -8,7 +8,7 @@
     background-color: transparent;
     cursor: pointer;
     
-    transition: 500ms  var(--timing-function);
+    transition: var(--time-delay)  var(--timing-function);
 }
 
 
@@ -46,7 +46,7 @@
         text-align: center;
         font-size: 20px;
         z-index: 1;
-        transition: 500ms  var(--timing-function);
+        transition: var(--time-delay)  var(--timing-function);
     
         &.is-open {
             display: block;
@@ -65,6 +65,6 @@
             text-align: center;
             font-size: 20px;
             z-index: 1;
-            transition: 500ms  var(--timing-function);
+            transition: var(--time-delay)  var(--timing-function);
         }
     }
