--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -33,7 +33,7 @@
         font-size: 24px;
         font-weight: 700;
 
-        transition: 500ms  var(--timing-function);
+        transition: var(--time-delay)  var(--timing-function);
 
         &:hover,
         &:focus {
