added button go to top

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -17,6 +17,7 @@
 @import './components/logo';
 @import './components/button';
 @import './components/mobile-menu';
+@import './components/btn-go-to-top';
 // layouts
 @import './layouts/header';
 @import './layouts/hero';
