--- a/src/sass/_portfolio.scss
+++ b/src/sass/_portfolio.scss
@@ -71,7 +71,7 @@
 }
 
 .portfolio__title {
-    margin: 20px 0;
+    margin-top: 15px;
 }
 
 @media screen and (min-width:320px) and (max-width:375px) {
@@ -99,7 +99,7 @@
 
     .portfolio__title {
         font-size: 14px;
-        margin: 8px 0;
+        margin-top: 10px;
     }
 }
 
@@ -128,7 +128,7 @@
 
     .portfolio__title {
         font-size: 14px;
-        margin: 10px 0;
+        margin-top: 12px;
     }
 }
 
@@ -157,7 +157,7 @@
 
     .portfolio__title {
         font-size: 14px;
-        margin: 12px 0;
+        margin-top: 12px;
     }
 }
 
@@ -186,7 +186,7 @@
 
     .portfolio__title {
         font-size: 14px;
-        margin: 12px 0;
+        margin-top: 10px;
     }
 }
 
@@ -215,7 +215,7 @@
 
     .portfolio__title {
         font-size: 14px;
-        margin: 16px 0;
+        margin-top: 10px;
     }
 }
 
@@ -244,7 +244,7 @@
 
     .portfolio__title {
         font-size: 14px;
-        margin: 18px 0;
+        margin-top: 10px;
     }
 }
 
