--- a/src/sass/layouts/_advantages.scss
+++ b/src/sass/layouts/_advantages.scss
@@ -1,94 +1,139 @@
 .first-item::before {
     content: "";
-    background-image: url('../images/125810746_1744136939087020_8377283448018247965_n.png');
+    background-image: url('../images/style.png');
     background-size: contain;
     background-repeat: no-repeat;
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     display: block; 
     margin: 0 auto;
+    margin-bottom: 20px;
 }
 
 .second-item::before {
     content: "";
-    background-image: url('../images/vohra\ \(1\).png');
+    background-image: url('../images/gob.png');
     background-size: contain;
     background-repeat: no-repeat;
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     display: block; 
     margin: 0 auto;
+    margin-bottom: 20px;
 }
 
 .thirt-item::before {
     content: "";
-    background-image: url('../images/Новый\ проект.png');
+    background-image: url('../images/esk.png');
     background-size: contain;
     background-repeat: no-repeat;
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     display: block; 
     margin: 0 auto;
+    margin-bottom: 20px;
 }
 
 .forth-item::before {
     content: "";
-    background-image: url('../images/одир.png');
+    background-image: url('../images/world-map.png');
     background-size: contain;
     background-repeat: no-repeat;
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     display: block; 
     margin: 0 auto;
+    margin-bottom: 20px;
 }
 
 .advantages__titles {
     font-family: "Lobster", sans-serif;
     font-weight: 400;
+    text-align: center;
+    margin-bottom: 20px;
 }
 
-@media screen and (min-width:320px) {
+.advantages__list {
+    display: flex;
+}
+
+.advantages__paragraph {
+    text-align: center;
+}
+
+@media screen and (min-width:320px) and (max-width:767px) {
     .advantages__list {
-        display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
     }
 
     .advantages__list li:not(:last-child) {
-        margin-right: 0px;
-        margin-bottom: 60px;
+        margin-bottom: 50px;
     }
 
     .advantages__titles {
-        margin-bottom: 20px;
-        font-size: 18px;
-    }
-
-    .advantages__paragraph {
         font-size: 18px;
     }
 
     .advantages__list-item {
         text-align: center;
-        width: 280px;
+        width: 290px;
     }
 }
-@media screen and (min-width:768px) and (max-width:1199px) {
+
+@media screen and (min-width:375px) {
+    .advantages__list-item {
+        width: 345px;
+    }
+}
+
+@media screen and (min-width:425px) {
+    .advantages__list-item {
+        width: 395px;
+    }
+}
+
+@media screen and (min-width:480px) {
+    .advantages__list-item {
+        width: 450px;
+    }
+}
+
+@media screen and (min-width:768px) and (max-width:1023px) {
     .advantages__list {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-between;
+        align-items: flex-start;
+    }
+
+    .advantages__list-item {
+        margin-bottom: 32px;
+    }
+
+    .advantages__list .advantages__list-item:nth-last-child(-n+2) {
+        margin-bottom: 0; 
     }
 
     .advantages__list-item {
         width: 300px;
     }
 }
+
+@media screen and (min-width:1024px) {
+    .advantages__list {
+        justify-content: space-between;
+    }
+
+    .advantages__list-item {
+        width: 220px;
+    }
+}
+
 @media screen and (min-width:1200px) {
     .advantages__list {
         flex-direction: row;
         justify-content: space-between;
+        align-items: flex-start;
     }
 
     .advantages__list li:not(:last-child) {
@@ -96,7 +141,11 @@
     }
 
     .advantages__titles {
-        margin-bottom: 15px;
         font-size: 24px;
+    }
+
+    .advantages__list-item {
+        text-align: center;
+        width: 260px;
     }
 }
