changes inner text

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,6 +1,6 @@
 <section class="hero">
     <div class="container">
         <h1 class="hero__title">Ткацька майстерня</h1>
-        <a class="button" href="./portfolio.html">До галереї</a>
+        <a class="button" href="./portfolio.html">Галерея</a>
     </div>
 </section>
