--- a/src/sass/components/_title.scss
+++ b/src/sass/components/_title.scss
@@ -1,5 +1,5 @@
 .title {
-    font-family: "Lobster", sans-serif;
+    font-family: "Marck Script", cursive;
     font-weight: 400;
     font-style: normal;
     font-size: 45px;
