--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -2,7 +2,7 @@ body {
     fill: var(--main-text-color);
     color: var(--main-text-color);
     background-color: var(--background-color);
-    font-family: Lato, sans-serif;
+    font-family: "Marck Script", cursive;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
