--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -7,9 +7,9 @@
     border: none;
     font-size: 20px;
     font-weight: 700;
-    box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
-    box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
-    box-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
+    box-shadow: 0px 0px 39px 5px #5c5470;
+    box-shadow: 0px 0px 39px 5px #5c5470;
+    box-shadow: 0px 0px 39px 5px #5c5470;
 }
 
 .button:hover,
