--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,4 +1,5 @@
 .header {
+    font-family: "Marck Script", cursive;
     position: relative;
     background-color: var(--secondary-bg-color);
     padding: 30px 0;
