--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,11 +1,11 @@
 :root {
 // main-palete
-    --accent-color: #a55233;
-    --main-text-color: #f3bc77;
-    --background-color: #1d1716;
-    --secondary-bg-color: #402a23;
-    --hover-shadow: 0px 0px 39px 5px rgba(243,188,119,1);
-    --hover-shadow-secondary: 0px 0px 20px 2px rgba(243,188,119,1);
+    --accent-color: #1d1716;
+    --main-text-color:  #dbd8e3;
+    --background-color: #2a2438; 
+    --secondary-bg-color: #1d1716;
+    --hover-shadow: 0px 0px 39px 5px #5c5470;
+    --hover-shadow-secondary: 0px 0px 20px 2px #5c5470;
 // svg-palete
     --svg-fill-first: #4267B2;
     --svg-fill-second:#C13584;
